--- a/test2.html
+++ b/test2.html
@@ -43,7 +43,7 @@
         <pattern id="pattern-5" patternUnits="objectBoundingBox" x="0%" width="100%" height="100%">
             <use xlink:href="#image-6" transform="scale(0.0701093728,0.0701093728)"></use>
         </pattern>
-        <image id="image-6" width="3936" height="5248" xlink:href="http://127.0.0.1:5500/img/photo1.jpg"/>
+        <image id="image-6" width="3936" height="5248" xlink:href="https://http://christmasgift.netlify.com/img/photo1.jpg"/>
     </defs>
     <g id="Gift" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="2nd" transform="translate(-269.000000, -51.000000)">
@@ -77,7 +77,7 @@
                 id="Rectangle-Copy" fill-opacity="0.7" fill="#F8E71C" fill-rule="nonzero" transform="translate(357.000000, 779.646446) rotate(-360.000000) translate(-357.000000, -779.646446) "></path>
             <path d="M269,268.5 L357,268.5 L357,313.5 L269,313.5 L273.837324,308.662676 L269,303.825351 L275.29686,297.528491 L269,291.231632 L275.91544,284.316192 L269,277.400751 C271.966917,274.433834 273.450376,272.950376 273.450376,272.950376 C273.450376,272.950376 271.966917,271.466917 269,268.5 Z"
                 id="Rectangle-Copy" fill="#D83F2F" fill-rule="nonzero"></path>
-            <text id="-&gt;" font-family="HanziPenSC-W3, HanziPen SC" font-size="40" font-weight="normal"
+            <text id="teste" font-family="HanziPenSC-W3, HanziPen SC" font-size="40" font-weight="normal"
                 letter-spacing="-15" fill="#000000">
                 <tspan x="985.570485" y="746.508957">-</tspan>
                 <tspan x="988.130485" y="746.508957" letter-spacing="0.4705884">&gt;</tspan>
