--- a/test2.html
+++ b/test2.html
@@ -43,7 +43,7 @@
         <pattern id="pattern-5" patternUnits="objectBoundingBox" x="0%" width="100%" height="100%">
             <use xlink:href="#image-6" transform="scale(0.0701093728,0.0701093728)"></use>
         </pattern>
-        <image id="image-6" width="3936" height="5248" xlink:href="https://http://christmasgift.netlify.com/img/photo1.jpg"/>
+        <image id="image-6" width="3936" height="5248" xlink:href="https://christmasgift.netlify.com/img/photo1.jpg"/>
     </defs>
     <g id="Gift" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="2nd" transform="translate(-269.000000, -51.000000)">
