added left arrow

--- a/test2.html
+++ b/test2.html
@@ -82,7 +82,7 @@
                 <tspan x="985.570485" y="746.508957">-</tspan>
                 <tspan x="988.130485" y="746.508957" letter-spacing="0.4705884">&gt;</tspan>
             </text>
-            <text id="-&gt;" transform="translate(444.074221, 732.508957) scale(-1, 1) translate(-444.074221, -732.508957) "
+            <text id="teste2" transform="translate(444.074221, 732.508957) scale(-1, 1) translate(-444.074221, -732.508957) "
                 font-family="HanziPenSC-W3, HanziPen SC" font-size="40" font-weight="normal" letter-spacing="-15" fill="#000000">
                 <tspan x="433.718927" y="746.508957">-</tspan>
                 <tspan x="436.278927" y="746.508957" letter-spacing="0.4705884">&gt;</tspan>
